# axum-askama-htmx-test

./: .gitignore  Cargo.toml  README.md
src/: main.rs  types.rs
templates/: chat.html  index.html  sse.html
