[package]
name = "axum-askama-htmx-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*" }
tokio = { version = "*", features = ["full"] }
askama = { version = "*" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tower-http = { version = "*", features = ["trace"] }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1.0.189", features = ["derive"] }
rand = "0.8.5"
axum-macros = "0.3.8"
