[package]
name = "axum-askama-htmx-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
askama = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tower-http = { version = "*", features = ["trace"] }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1.0.189", features = ["derive"] }
rand = "0.8.5"
