[package]
name = "axum-askama-htmx-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
axum-extra = { version = "*", features = ["cookie"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
askama = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "time", "fmt"] }
tower-http = { version = "*", features = ["trace"] }
futures = "*"
tokio-stream = { version = "*", features = ["sync"] }
serde = { version = "*", features = ["derive"] }
rand = "*"
time = { version = "*", features = ["macros"] }

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
strip = false
panic = "unwind"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
